tests/NormalTests/paczka1/fuzzy1/70091641.err
Error in line 2: NtQkI S727 80,7
Error in line 4: S727 S466 36,2
Error in line 16: S727 S985 149,0
Error in line 8: oPIdnlsqP S727 84,9
Error in line 23: oPIdnlsqP S985 50,9
Error in line 33: cQhc7A S788 53,5
